- Fixed improper handling of accidentals
- Fixed default suggested name when exporting to PDF on mac OS X
- Fixed odd-numbered time signatures like 9/8
- Added DropD-bass tuning preset, cleaned up code
- Improved printing output by putting a bigger centered title on first page.
- Fixed glitches in score editor settings
- Nicer-looking ties in score editor
- Major code cleanup in printing code
- Major code cleanup in measure handling code
- Major code cleanup in track widgets
- More automatic memory management, improved leak checks
- Fixed memory leaks

1.1.3
- improved vector implementation, fixing possible problems on 64-bits machines
- improved 'follow playback'
- added warning message when adding too many tracks
- always play note on click
- fixed file name being used over song name when printing tablature
- removed harmless warning on the terminal when loading a midi file saved by aria
- fixed undoing vertical moves in guitar editor
- fixed undoing vertical moves in drum editor
- fixed 'follow playback' menu item not properly checked/unchecked when switching between songs
- improvement 'settings' menu layout
- improved scons towards a real install target
- moved docs inside resources so they're always available
- fixed adding new tracks in manual channel management mode
- correctly handle when there's too many tabs open for all to be visible
- fixed crash in score editor
- fixed 'snap notes to grid' sometimes collapsing notes of duration 0
- code cleanup
- more improvements to scons build system

1.1.2
- Added german translation (thanks to Friedrich Weber!)
- Cleaned up language code, making adding new languages easier and less error-prone
- Fixed files being overwriten even if user chose "no" in the overwrite dialog (when he didn't choose another path right away)
- Fixed song length detection when importing midi files
- Fixed note ordering bug that could potentially have caused songs to be messed up